--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,10 +15,10 @@ spring:
     allow-circular-references: true
   # redis配置
   redis:
-    host: 192.168.31.138
+    host: 120.24.74.7
     port: 6379
-    password: 123123
-    database: 1
+    password: Wsxbwps123.
+    database: 0
   # mq配置
   rabbitmq:
     host: 120.24.74.7
